--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,48 +1,55 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <base href="/">
+  <head>
+      <meta charset="UTF-8">
+      <base href="/">
 
-    <title>welcome to mb.me</title>
+      <title>welcome to mb.me</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
+      <!-- CSS -->
+      <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 
-    <!-- JS -->
-    <script src="libs/angular/angular.min.js"></script>
-    <script src="libs/angular-route/angular-route.min.js"></script>
+      <!-- JS -->
+      <script src="libs/angular/angular.min.js"></script>
+      <script src="libs/angular-route/angular-route.min.js"></script>
 
-    <!-- ANGULAR CUSTOM -->
-    <script src="js/controllers/MainCtrl.js"></script>
-    <script src="js/controllers/AboutCtrl.js"></script>
-    <script src="js/controllers/ResumeCtrl.js"></script>
-    <script src="js/appRoutes.js"></script>
-    <script src="js/app.js"></script>
-</head>
+      <!-- ANGULAR CONTROLLERS -->
+      <script src="js/services/SurfcastFactory.js"></script>
 
-<body ng-app="mbApp" ng-controller="MainController">
+      <!-- ANGULAR CONTROLLERS -->
+      <script src="js/controllers/MainCtrl.js"></script>
+      <script src="js/controllers/AboutCtrl.js"></script>
+      <script src="js/controllers/ResumeCtrl.js"></script>
+      <script src="js/controllers/SurfForecastCtrl.js"></script>
+      <script src="js/appRoutes.js"></script>
+      <script src="js/app.js"></script>
+  </head>
 
-<div class="container">
+  <body ng-app="mbApp" ng-controller="MainController">
 
-    <!-- HEADER -->
-    <nav class="navbar navbar-inverse">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">mikebolanos.me</a>
-        </div>
+    <div class="container">
 
-        <ul class="nav navbar-nav">
-            <li><a href="/about">About</a></li>
-        </ul>
-        <ul class="nav navbar-nav">
-            <li><a href="/resume">Resume</a></li>
-        </ul>
-    </nav>
+        <!-- HEADER -->
+        <nav class="navbar navbar-inverse">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">mikebolanos.me</a>
+            </div>
 
-    <!-- ANGULAR DYNAMIC CONTENT -->
-    <div ng-view></div>
+            <ul class="nav navbar-nav">
+                <li><a href="/about">About</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/resume">Resume</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/surf">Surf Forecast</a></li>
+            </ul>
+        </nav>
 
-</div>
-</body>
+        <!-- ANGULAR DYNAMIC CONTENT -->
+        <div ng-view></div>
+
+    </div>
+  </body>
 </html>
