--- a/public/views/index.html
+++ b/public/views/index.html
@@ -14,8 +14,9 @@
       <script src="libs/angular/angular.min.js"></script>
       <script src="libs/angular-route/angular-route.min.js"></script>
 
-      <!-- ANGULAR CONTROLLERS -->
+      <!-- ANGULAR SERVICES -->
       <script src="js/services/SurfcastFactory.js"></script>
+      <script src="js/services/ResumeFactory.js"></script>
 
       <!-- ANGULAR CONTROLLERS -->
       <script src="js/controllers/MainCtrl.js"></script>
@@ -32,19 +33,21 @@
 
         <!-- HEADER -->
         <nav class="navbar navbar-inverse">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">mikebolanos.me</a>
-            </div>
 
-            <ul class="nav navbar-nav">
-                <li><a href="/about">About</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="/resume">Resume</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="/surf">Surf Forecast</a></li>
-            </ul>
+          <div class="navbar-header">
+              <a class="navbar-brand" href="/">mikebolanos.me</a>
+          </div>
+
+          <ul class="nav navbar-nav">
+              <li><a href="/about">About</a></li>
+          </ul>
+          <ul class="nav navbar-nav">
+              <li><a href="/resume">Resume</a></li>
+          </ul>
+          <ul class="nav navbar-nav">
+              <li><a href="/surf">Surf Forecast</a></li>
+          </ul>
+
         </nav>
 
         <!-- ANGULAR DYNAMIC CONTENT -->
