--- a/public/views/resume.html
+++ b/public/views/resume.html
@@ -5,7 +5,10 @@
       <div class="row">
         <div class="col-md-4">
             <p><strong>{{ detail.position }}</strong><br>@{{ detail.company }}</p>
-            From: {{ detail.fromDate | date:'MM-dd-yyyy' }}<br>To: {{ detail.toDate | date:'MM-dd-yyyy' }}
+            <div>From: {{ detail.fromDate | date:'MM-dd-yyyy' }}</div>
+            <div ng-if="detail.toDate == null">To: Current</div>
+            <div ng-if="detail.toDate != null">To: {{ detail.toDate | date:'MM-dd-yyyy' }}</div>
+
         </div>
         <div class="col-md-8 text-left">
           <ul>
