Added some content

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -35,17 +35,17 @@
         <nav class="navbar navbar-inverse">
 
           <div class="navbar-header">
-              <a class="navbar-brand" href="/">mikebolanos.me</a>
+              <a class="navbar-brand" href="/">mb.me</a>
           </div>
 
           <ul class="nav navbar-nav">
-              <li><a href="/about">About</a></li>
+              <li><a href="/about">about this site</a></li>
           </ul>
           <ul class="nav navbar-nav">
-              <li><a href="/resume">Resume</a></li>
+              <li><a href="/resume">resume</a></li>
           </ul>
           <ul class="nav navbar-nav">
-              <li><a href="/surf">Surf Forecast</a></li>
+              <li><a href="/surf">surf forecast</a></li>
           </ul>
 
         </nav>
