--- a/public/views/index.html
+++ b/public/views/index.html
@@ -35,7 +35,7 @@
         <nav class="navbar navbar-inverse">
 
           <div class="navbar-header">
-              <a class="navbar-brand" href="/">mb.me</a>
+              <a class="navbar-brand" href="/">mikebolanos.me</a>
           </div>
 
           <ul class="nav navbar-nav">
