--- a/public/views/resume.html
+++ b/public/views/resume.html
@@ -1,18 +1,17 @@
-<div class="jumbotron text-center">
+<div class="jumbotron text-center content">
     <h1>Resume</h1>
     <br>
-    <div class="container" ng-repeat="detail in resume">
+    <div class="container post" ng-repeat="detail in resume">
       <div class="row">
         <div class="col-md-4">
             <p><strong>{{ detail.position }}</strong><br>@{{ detail.company }}</p>
             <div>From: {{ detail.fromDate | date:'MM-dd-yyyy' }}</div>
             <div ng-if="detail.toDate == null">To: Current</div>
             <div ng-if="detail.toDate != null">To: {{ detail.toDate | date:'MM-dd-yyyy' }}</div>
-
         </div>
         <div class="col-md-8 text-left">
           <ul>
-            <li ng-repeat="responsibility in detail.responsibilities">{{ responsibility }}</li>
+            <li ng-repeat="responsibility in detail.responsibilities">:: {{ responsibility }}</li>
           </ul>
         </div>
       </div>
