--- a/public/views/resume.html
+++ b/public/views/resume.html
@@ -2,6 +2,7 @@
     <h1>Resume</h1>
     <br>
     <div class="container post" ng-repeat="detail in resume">
+
       <div class="row">
         <div class="col-md-4">
             <p><strong>{{ detail.position }}</strong><br>@{{ detail.company }}</p>
@@ -10,11 +11,13 @@
             <div ng-if="detail.toDate != null">To: {{ detail.toDate | date:'MM-dd-yyyy' }}</div>
         </div>
         <div class="col-md-8 text-left">
+          <h3>Responsibilities</h3>
           <ul>
             <li ng-repeat="responsibility in detail.responsibilities">:: {{ responsibility }}</li>
           </ul>
         </div>
       </div>
+
     </div>
 
 </div>
