--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,11 +8,13 @@
 
       <!-- CSS -->
       <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
-      <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
+      <!-- <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 
       <!-- JS -->
       <script src="libs/angular/angular.min.js"></script>
       <script src="libs/angular-route/angular-route.min.js"></script>
+      <script src="js/app.js"></script>
+      <script src="js/appRoutes.js"></script>
 
       <!-- ANGULAR SERVICES -->
       <script src="js/services/SurfcastFactory.js"></script>
@@ -23,11 +25,10 @@
       <script src="js/controllers/AboutCtrl.js"></script>
       <script src="js/controllers/ResumeCtrl.js"></script>
       <script src="js/controllers/SurfForecastCtrl.js"></script>
-      <script src="js/appRoutes.js"></script>
-      <script src="js/app.js"></script>
+
   </head>
 
-  <body ng-app="mbApp" ng-controller="MainController">
+  <body ng-app="mbApp">
 
     <div class="container">
 
@@ -54,5 +55,6 @@
         <div ng-view></div>
 
     </div>
+
   </body>
 </html>
