Gigi section for bro

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -19,12 +19,14 @@
       <!-- ANGULAR SERVICES -->
       <script src="js/services/SurfcastFactory.js"></script>
       <script src="js/services/ResumeFactory.js"></script>
+      <script src="js/services/DigiFactory.js"></script>
 
       <!-- ANGULAR CONTROLLERS -->
       <script src="js/controllers/MainCtrl.js"></script>
       <script src="js/controllers/AboutCtrl.js"></script>
       <script src="js/controllers/ResumeCtrl.js"></script>
       <script src="js/controllers/SurfForecastCtrl.js"></script>
+      <script src="js/controllers/DigiCtrl.js"></script>
 
   </head>
 
@@ -47,6 +49,9 @@
           </ul>
           <ul class="nav navbar-nav">
               <li><a href="/surf">surf forecast</a></li>
+          </ul>
+          <ul class="nav navbar-nav">
+              <li><a href="/digi">digiwaxx</a></li>
           </ul>
 
         </nav>
