small content update

--- a/public/views/digi.html
+++ b/public/views/digi.html
@@ -7,10 +7,9 @@
     <input type='text' ng-model='trackid'/>
   </p>
   <p>
-    <button type="button" ng-click="initializeDownload(trackid, cookie)">download</button>
+    <button type="button" ng-click="initializeDownload(trackid, cookie)">get links</button>
   </p>
   <p>
-    get links: <br>{{ mp3Link }}
     <ul>
       <li ng-repeat="link in mp3Links"><a href="http://www.digiwaxx.com/VerifyTrack.php?track={{ link }}.mp3" target="_blank">{{ link }}.mp3</li>
     </ul>
